# ZnTrack

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  dev-requirements.txt  dvc.yaml  params.yaml  postBuild  pyproject.toml  requirements.txt  setup.py  zntrack.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: benchmark.yaml  black.yaml  codeql-analysis.yml  docs-test.yaml  docs.yaml  flake8.yaml  isort.yaml  lint.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  publish.yaml  pytest-benchmark.yaml  pytest.yaml  test.yaml
CI/integration_tests/: test_ValueError_in_Stage.py  test_ValueError_loading_Node.py  test_call_stage_multiple_times.py  test_class.py  test_empty_class.py  test_example01.py  test_example_01.py  test_exec_node.py  test_graph01.py  test_graph_01.py  test_metadata_timeit.py  test_multi_deps_nodes.py  test_multi_stages.py  test_multiple_instances.py  test_no_dvc.py  test_numpy_params_results.py  test_params_types.py  test_passed_models.py  test_pre_call.py  test_single_node.py  test_stage_stage_dependency.py  test_tracking.py
PyTrack/core/: dataclasses.py  py_track.py
docs/: index.html
docs/source/: conf.py  examples.rst  fields.rst  glossary.rst  index.rst  installation.rst  jupyter.rst  modules_and_classes.rst  node.rst  node_details.rst  overview.rst  project.rst  tutorials.rst
dvc_op/: __init__.py
dvc_op/core/: dataclasses.py  dvc_op.py
dvc_op/demo_functions/: AddData.py
examples/: README.md  dataclasses_for_parameters.ipynb  estimate_pi_with_mc.ipynb  nodes_for_parameters.ipynb
examples/docs/: 01_Intro.ipynb  02_Inheritance.ipynb  02_PassingClasses.ipynb  03_dependencies.ipynb  04_metrics_and_plots.ipynb  05_metadata.ipynb  06_named_nodes.ipynb  07_functions.ipynb  07_spawn_nodes.ipynb  08_custom_zntrackoptions.ipynb  09_lazy.ipynb  README.md  parameter_optimization.ipynb
misc/mlflow/: Dockerfile  README.md
pyTrack/core/: dataclasses.py
pytrack/: __init__.py
pytrack/core/: __init__.py  data_classes.py  dataclasses.py  decorator.py  parameter.py  py_track.py
pytrack/interface/: __init__.py  base.py
pytrack/project/: py_track_project.py
pytrack/utils/: __init__.py  config.py  decorators.py  serializer.py  type_hints.py  types.py  utils.py
tests/: conftest.py  test_example_05.py  test_zn_metrics.py  test_zntrack.py
tests/basic/: test_class.py  test_empty_class.py
tests/benchmark/: test_benchmark.py
tests/dump/: test_dump_basic.py
tests/examples/: test_examples.py
tests/files/: test_add.py  test_apply.py  test_auto_fields.py  test_basic.py  test_combined_dependencies.py  test_custom_field.py  test_custom_module.py  test_dataclass_deps.py  test_dataclass_deps_nested.py  test_dataclass_w_deps_params_path.py  test_dependencies.py  test_deps_outside_graph.py  test_groups.py  test_meta_params.py  test_metrics_deps.py  test_names.py  test_node_settings.py  test_plots.py  test_user_config.py  test_x_path_none.py
tests/integration/: skip_test_meta.py  skip_test_node_nwd.py  skip_test_plots.py  skip_test_timeit.py  test_access_option_in_graph.py  test_add_ext.py  test_apply.py  test_apply_method.py  test_auto_infer_type.py  test_build.py  test_cli.py  test_combine_lists.py  test_defining_custom_fields.py  test_deps_dataclass.py  test_double_repro.py  test_dvc_outs.py  test_dvc_params.py  test_dvc_plots.py  test_example_01.py  test_example_02.py  test_example_03.py  test_example_04.py  test_example_05.py  test_example_06.py  test_external.py  test_external_experiments.py  test_file_changes.py  test_fn_deps.py  test_from_rev.py  test_fs_patch.py  test_fs_path.py  test_get_node_status.py  test_get_nodes.py  test_groups.py  test_inheritance.py  test_lazy_loading.py  test_list_deps.py  test_magic_patch.py  test_meta.py  test_misc.py  (+35 more)
tests/integration_tests/: test_cli.py  test_direct_usage.py  test_dvc_checkpoints.py  test_dvc_outs.py  test_dvc_params.py  test_file_changes.py  test_getdeps.py  test_inheritance.py  test_lazy_loading.py  test_list_deps.py  test_loading_exceptions.py  test_meta.py  test_metadata.py  test_node_to_node_dependencies.py  test_operating_directory.py  test_options_save_n_load.py  test_single_node.py  test_spawn.py  test_timeit.py  test_zn_deps.py  test_zn_methods.py  test_zn_nodes.py  test_zn_nodes2.py  test_zn_params.py  test_zn_plots.py  various_tests.py
tests/typing/: test_field_type_annotations.py
tests/unit_tests/: test_deps_types.py  test_node_group.py  test_node_init.py  test_node_load.py  test_node_name.py  test_node_nwd.py  test_node_state.py  test_repr.py  test_stage_hash.py  test_state_extend_plots.py  test_utils_misc.py  test_yaml_no_anchors.py  test_zn_deps.py  test_znjson_serializer.py
tutorials/TensorFlowDemo/: TensorFlowExample.ipynb  functions.py
tutorials/demo_functions/: AddData.py
tutorials/interface/: FilesFromMultipleRev.ipynb
zntrack/: __init__.py  abc.py  add.py  apply.py  cli.py  config.py  converter.py  deployment.py  entrypoints.py  exceptions.py  from_rev.py  group.py  node.py  options.py  project.py  state.py  user_config.py
zntrack/cli/: __init__.py  cli.py  init.py  mlflow.py
zntrack/core/: __init__.py  base.py  data_classes.py  decorator.py  dvcgraph.py  jupyter.py  load.py  node.py  nodify.py  parameter.py  spawn.py  test_timeit.py  zntrack.py  zntrackoption.py
zntrack/descriptor/: __init__.py  base.py  descriptor.py
zntrack/dvc/: __init__.py  custom_base.py
zntrack/examples/: __init__.py
zntrack/exceptions/: __init__.py
zntrack/fields/: __init__.py  auto.py  base.py  dependency.py  deps.py  field.py  fields.py  fields.pyi  outs_and_metrics.py  params.py  plots.py  x_path.py
zntrack/interface/: __init__.py  base.py
zntrack/mcp/: __init__.py  server.py
zntrack/meta/: __init__.py
zntrack/metadata/: __init__.py  base.py  collectors.py  decorators.py
zntrack/notebooks/: jupyter.py
zntrack/plugins/: __init__.py  base.py
zntrack/project/: __init__.py  py_track_project.py  zntrack_project.py
zntrack/zn/: meta.py  (+7 more)
(+243 files in other folders)
