[project]
name = "zntrack"
version = "0.8.2"
description = "Create, Run and Benchmark DVC Pipelines in Python"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
keywords=["data-science", "data-version-control", "machine-learning", "reproducibility", "collaboration"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "znfields>=0.1.2",
    "znflow>=0.2.4",
    "znjson>=0.2.6",
]

[project.scripts]
zntrack = 'zntrack.cli:app'

[project.urls]
Repository = "https://github.com/zincware/zntrack"
Releases = "https://github.com/zincware/zntrack/releases"
Documentation = "https://zntrack.readthedocs.io"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "dvc-s3>=3.2.0",
    "furo>=2024.8.6",
    "h5py>=3.12.1",
    "mlflow>=2.20.0",
    "nbsphinx>=0.9.6",
    "nbsphinx-link>=1.3.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.coverage.run]
relative_files = true
branch = true
# omit the tests themselves
omit = ["*/tests/*", "*/tmp/*", "*/interface/*", "zntrack/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pylint.messages_control]

max-line-length = 90

disable = [
    "logging-fstring-interpolation",
    "too-many-arguments",
    "too-many-instance-attributes",
    "dotted-import-in-loop",
    # seems to fail for some cases
    "no-else-return",
    # allow for open TODOs
    "fixme",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"] #, "ANN"]
extend-ignore = [
    "D213", "D203",
    "D401",
    "N802", "N801",
    "C901", # for now
]

exclude = [
    "tmp",
    "tests",
    "docs",
]


[tool.codespell]
skip = "poetry.lock,examples/*"

[tool.pytest.ini_options]
markers = [
    "needs_internet: marks tests which need internet access (deselect with '-m \"not needs_internet\"')",
]
