[project]
name = "zntrack"
version = "0.8.8"
description = "Create, Run and Benchmark DVC Pipelines in Python"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
keywords=["data-science", "data-version-control", "machine-learning", "reproducibility", "collaboration"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.60.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "znfields>=0.1.2",
    "znflow>=0.2.5",
    "znjson>=0.2.6",
]

[project.scripts]
zntrack = 'zntrack.cli:app'

[project.urls]
Repository = "https://github.com/zincware/zntrack"
Releases = "https://github.com/zincware/zntrack/releases"
Documentation = "https://zntrack.readthedocs.io"
Discord = "https://discord.gg/7ncfwhsnm4"

[dependency-groups]
dev = [
    "dvc-s3>=3.2.0",
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "mlflow>=2.20.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-benchmark[histogram]>=5.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-hoverxref>=1.4.2",
    "sphinxcontrib-mermaid>=1.0.0",
]
examples = [
    "ase>=3.24.0",
    "mace-torch>=0.3.10",
    "paraffin>=0.3.6",
    "rdkit2ase>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
# omit the tests themselves
omit = ["*/tests/*", "*/tmp/*", "*/interface/*", "zntrack/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pylint.messages_control]

max-line-length = 90

disable = [
    "logging-fstring-interpolation",
    "too-many-arguments",
    "too-many-instance-attributes",
    "dotted-import-in-loop",
    # seems to fail for some cases
    "no-else-return",
    # allow for open TODOs
    "fixme",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"] #, "ANN"]
extend-ignore = [
    "D213", "D203",
    "D401",
    "N802", "N801",
    "C901", # for now
]

exclude = [
    "tmp",
    "tests",
    "docs",
]


[tool.codespell]
ignore-words-list = "basf"
skip = "poetry.lock,examples/*"

[tool.pytest.ini_options]
markers = [
    "needs_internet: marks tests which need internet access (deselect with '-m \"not needs_internet\"')",
]
addopts = "-m 'not benchmark'"

[project.entry-points.'zntrack.nodes']
zntrack-examples = 'zntrack.examples:nodes'
